# trinity-engine

./: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
code/client/: cl_cgame.c  cl_curl.c  cl_keys.c  cl_main.c  cl_tv.c  client.h
code/game/: g_public.h
code/qcommon/: files.c  msg.c  q_platform.h  qcommon.h  vm_x86.c
code/renderer2/: qgl.h  tr_backend.c  tr_bsp.c  tr_extensions.c  tr_fbo.c  tr_glsl.c  tr_image.c  tr_local.h
code/sdl/: sdl_glimp.c  sdl_icon.h
code/server/: server.h  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_tv.c
code/unix/: unix_main.c  unix_shared.c
code/web/: client-config.json  client.html.in  demo-loader.js.in
code/win32/: resource.h  win_resource.rc
code/win32/msvc2017/: trinity-ded.vcxproj  trinity-ded.vcxproj.filters  trinity.sln  trinity.vcxproj  trinity.vcxproj.filters
